--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,11 +38,32 @@ jobs:
         with:
           cosign-release: 'v2.2.4'
 
-      # Set up BuildKit Docker container builder to be able to build
-      # multi-platform images and export cache
-      # https://github.com/docker/setup-buildx-action
+      - name: Checkout repository
+        uses: actions/checkout@v2  # Checkout your code
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+        uses: docker/setup-buildx-action@v2  # Set up Docker Buildx
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image for ARM64
+        run: |
+          docker buildx build --platform linux/arm64 -t ghcr.io/sam7x/clickhouse:main .
+          # If you want to push it to the registry
+          docker buildx build --platform linux/arm64 -t ghcr.io/sam7x/clickhouse:main --push .
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
