--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,8 @@ env:
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
 
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -38,9 +36,6 @@ jobs:
         with:
           cosign-release: 'v2.2.4'
 
-      - name: Checkout repository
-        uses: actions/checkout@v2  # Checkout your code
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2  # Set up Docker Buildx
 
@@ -59,11 +54,14 @@ jobs:
           username: ${{ github.actor }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      # Build and push Docker image for ARM64
       - name: Build and push Docker image for ARM64
         run: |
-          docker buildx build --platform linux/arm64 -t ghcr.io/sam7x/clickhouse:main .
-          # If you want to push it to the registry
-          docker buildx build --platform linux/arm64 -t ghcr.io/sam7x/clickhouse:main --push .
+          docker buildx build \
+            --platform linux/arm64 \
+            -t ghcr.io/sam7x/clickhouse:main \
+            --push \
+            .
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
